--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
         build: ./SicconApp/backend
         volumes:
             - ./SicconApp/backend:/app
+            - /app/node_modules
         ports:
             - "5010:5010"
         container_name: siccon-backend
